--- a/css/singup.css
+++ b/css/singup.css
@@ -96,8 +96,7 @@ form {
     color: #4E4B66;
 }
 
-p.forgot-pass,
-p.signup {
+p.signin {
     margin-top: 10px;
     margin-bottom: 0px;
     font-family: Inter, sans-serif;
@@ -128,17 +127,16 @@ p.signup {
 
 .left .card-header .logo {
     position: absolute;
+    top: 25%;
     left: -1000%;
     right: -1000%;
-    top: -1000%;
-    bottom: -1000%;
     margin: auto;
     min-height: 10%;
 }
 
 .left .card-header p {
     position: absolute;
-    top: 57%;
+    top: 40%;
     left: -1000%;
     right: -1000%;
     text-align: center;
