--- a/css/home_login.css
+++ b/css/home_login.css
@@ -69,28 +69,92 @@ a {
     color: #414141;
 }
 
-.signup {
+header .right .profile {
+    display: flex;
+    justify-content: space-around;
+    background-color: #FFF;
+}
+
+header .right .profile div {
     position: relative;
-    top: 40px;
+    padding-top: 40px;
+    background-color: #FFF;
+}
+
+header .right .profile div input {
+    background: #FFFFFF;
+    height: 30px;
+    width: 200px;
+    border: 1px solid #DEDEDE;
+    border-radius: 8px;
+}
+
+header .right .profile div input::placeholder {
+    padding-left: 15%;
+    font-size: 12px;
+}
+
+header .right .profile div i {
+    position: absolute;
+    top: 50px;
+    left: 10px;
+    font-size: 0.8em;
+    z-index: 9999;
+    color: #6E7191;
+}
+
+header .right .profile .search {
+    position: relative;
+    bottom: 15px;
+    right: 30px;
+    display: none;
+}
+
+.profile a i {
+    display: block;
+    margin-right: 40px;
+    margin-top: 35px;
+    color: #414141;
+    font-size: 1em;
+}
+
+.profile {
+    margin-top: 15px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.nav-desktop {
+    width: 100px;
+    text-align: center;
+    z-index: 9999;
+    position: absolute;
+    right: 12%;
+    top: 85px;
+    background: #FFF;
+    display: none;
+    border-radius: 5px;
+    flex-direction: column;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+.nav-desktop a {
+    padding-top: 7px;
+    padding-bottom: 5px;
     font-family: Mulish, sans-serif;
     font-style: normal;
-    font-weight: 700;
-    font-size: 12px;
-    align-items: center;
-    text-align: center;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
     letter-spacing: 0.75px;
-    width: 100px;
-    height: 35px;
-    background: #5F2EEA;
-    border-radius: 4px;
-    border: none;
+    color: #4E4B66;
 }
 
 header .right>a {
     display: none;
 }
 
-header .right i {
+header .right>i {
     display: none;
 }
 
@@ -711,6 +775,14 @@ footer .footer-item4>div>div i {
         color: #000000;
     }
 
+    header .right .profile img {
+        display: none;
+    }
+
+    header .right .profile a {
+        display: none;
+    }
+
     /* NAVBAR */
     nav {
         display: none;
@@ -733,6 +805,41 @@ footer .footer-item4>div>div i {
         text-align: center;
         background: #FFF;
         border-top: 0.5px solid #DEDEDE;
+    }
+
+    nav>div {
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+        background-color: #FFF;
+    }
+
+    nav>div>div {
+        position: relative;
+        padding-top: 30px;
+        padding-bottom: 15px;
+        background-color: #FFF;
+    }
+
+    nav>div>div input {
+        background: #FFFFFF;
+        height: 50px;
+        width: 600px;
+        border: 1px solid #DEDEDE;
+        border-radius: 4px;
+    }
+
+    nav>div>div input::placeholder {
+        padding-left: 7%;
+        font-size: 16px;
+    }
+
+    nav>div>div i {
+        position: absolute;
+        top: 45px;
+        left: 15px;
+        font-size: 2em;
+        color: #6E7191;
     }
 
     nav a {
@@ -841,6 +948,14 @@ footer .footer-item4>div>div i {
         color: #000000;
     }
 
+    header .right .profile img {
+        display: none;
+    }
+
+    header .right .profile a {
+        display: none;
+    }
+
     /* NAVBAR */
     nav {
         display: none;
@@ -863,6 +978,41 @@ footer .footer-item4>div>div i {
         text-align: center;
         background: #FFF;
         border-top: 0.5px solid #DEDEDE;
+    }
+
+    nav>div {
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+        background-color: #FFF;
+    }
+
+    nav>div>div {
+        position: relative;
+        padding-top: 30px;
+        padding-bottom: 15px;
+        background-color: #FFF;
+    }
+
+    nav>div>div input {
+        background: #FFFFFF;
+        height: 50px;
+        width: 300px;
+        border: 1px solid #DEDEDE;
+        border-radius: 4px;
+    }
+
+    nav>div>div input::placeholder {
+        padding-left: 15%;
+        font-size: 16px;
+    }
+
+    nav>div>div i {
+        position: absolute;
+        top: 45px;
+        left: 15px;
+        font-size: 2em;
+        color: #6E7191;
     }
 
     nav a {
