--- a/css/home_login.css
+++ b/css/home_login.css
@@ -865,6 +865,8 @@ footer .footer-item4>div>div i {
 
     /* FOOTER */
     footer {
+        padding-left: 0%;
+        padding-right: 0%;
         align-items: center;
     }
 
@@ -1039,6 +1041,8 @@ footer .footer-item4>div>div i {
 
     /* FOOTER */
     footer {
+        padding-left: 0%;
+        padding-right: 0%;
         align-items: center;
     }
 
