--- a/css/list_movie.css
+++ b/css/list_movie.css
@@ -49,7 +49,7 @@ header .logo2 {
     height: 50px;
 }
 
-.header-bar {
+header .right .header-bar {
     margin-top: 50px;
 }
 
@@ -58,7 +58,7 @@ a {
     color: #F7F7FC;
 }
 
-.header-bar a {
+header .right .header-bar a {
     margin-right: 50px;
     font-family: Mulish, sans-serif;
     font-style: normal;
@@ -110,7 +110,7 @@ header .right .profile .search {
     display: none;
 }
 
-.profile a i {
+header .right .profile a i {
     display: block;
     margin-right: 40px;
     margin-top: 35px;
@@ -118,13 +118,13 @@ header .right .profile .search {
     font-size: 1em;
 }
 
-.profile {
+header .right .profile {
     margin-top: 15px;
     height: 50px;
     border-radius: 50%;
 }
 
-.nav-desktop {
+header .nav-desktop {
     width: 100px;
     text-align: center;
     z-index: 9999;
@@ -138,7 +138,7 @@ header .right .profile .search {
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
 }
 
-.nav-desktop a {
+header .nav-desktop a {
     padding-top: 7px;
     padding-bottom: 5px;
     font-family: Mulish, sans-serif;
@@ -167,463 +167,6 @@ nav {
 nav>p {
     display: none;
 }
-
-/* MAIN */
-main {
-    grid-row: 2;
-}
-
-main .content-1 {
-    position: relative;
-    height: 550px;
-    padding-left: 10%;
-    padding-right: 10%;
-    background-color: #fff;
-    display: flex;
-    justify-content: space-around;
-}
-
-main .content-1 .right {
-    margin-top: 30px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    height: 80%;
-}
-
-main .content-1 .left {
-    flex-basis: 400px;
-    background-color: #fff;
-}
-
-main .content-1 .left p {
-    position: relative;
-    top: 30%;
-    font-family: Mulish, sans-serif;
-    font-style: normal;
-    font-size: 16px;
-    line-height: 30px;
-    color: #A0A3BD;
-}
-
-main .content-1 .left h1 {
-    position: relative;
-    top: 30%;
-    font-family: Mulish, sans-serif;
-    font-style: normal;
-    font-size: 40px;
-    line-height: 30px;
-    color: #5F2EEA;
-}
-
-
-main .content-2 {
-    position: relative;
-    height: 350px;
-    padding-left: 10%;
-    padding-right: 10%;
-    background-color: #F5F6F8;
-    display: flex;
-    flex-direction: column;
-}
-
-.content-2 .top {
-    margin-top: 20px;
-    margin-bottom: 30px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.content-2 .top a {
-    font-family: Mulish, sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 20px;
-    text-align: right;
-    letter-spacing: 0.15px;
-    color: #5F2EEA;
-}
-
-.content-2 .top h2 {
-    font-family: Mulish, sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 30px;
-    color: #5F2EEA;
-}
-
-.content-2 .bottom {
-    display: flex;
-    justify-content: space-around;
-}
-
-.content-2 .bottom img {
-    width: 150px;
-    padding: 20px;
-    border: 2px solid #FFFFFF;
-    border-radius: 8px;
-}
-
-.content-2 .bottom .m1 {
-    display: none;
-}
-
-.content-2 .bottom .m2 {
-    display: none;
-}
-
-.content-2 .bottom .m3 {
-    display: none;
-}
-
-.content-2 .bottom .m4 {
-    display: none;
-}
-
-.content-2 .bottom .m5 {
-    display: none;
-}
-
-.content-2 .bottom .img1:hover~.m1 {
-    display: block;
-    z-index: 9999;
-}
-
-.content-2 .bottom .img2:hover~.m2 {
-    display: block;
-    z-index: 9999;
-}
-
-.content-2 .bottom .img3:hover~.m3 {
-    display: block;
-    z-index: 9999;
-}
-
-.content-2 .bottom .img4:hover~.m4 {
-    display: block;
-    z-index: 9999;
-}
-
-.content-2 .bottom .img5:hover~.m5 {
-    display: block;
-    z-index: 9999;
-}
-
-.content-2 .bottom .img1:hover {
-    display: none;
-}
-
-.content-2 .bottom .img2:hover {
-    display: none;
-}
-
-.content-2 .bottom .img3:hover {
-    display: none;
-}
-
-.content-2 .bottom .img4:hover {
-    display: none;
-}
-
-.content-2 .bottom .img5:hover {
-    display: none;
-}
-
-.content-2 .bottom {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.content-2 .bottom .card-movie {
-    background-color: #FFF;
-    border-radius: 8px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-}
-
-.content-2 .bottom .card-movie button:hover {
-    color: #fff;
-    background: #5F2EEA;
-}
-
-.content-2 .card-movie>div {
-    width: 100%;
-    height: 80px;
-    position: relative;
-}
-
-.content-2 .bottom button {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    bottom: 10px;
-    font-family: Mulish, sans-serif;
-    color: #5F2EEA;
-    font-style: normal;
-    font-size: 12px;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.75px;
-    width: 80%;
-    height: 25px;
-    border: 1px solid #5F2EEA;
-    border-radius: 4px;
-}
-
-.content-2 .card-movie>div h5 {
-    font-family: Mulish, sans-serif;
-    font-style: normal;
-    font-weight: 700px;
-    font-size: 12px;
-    line-height: 22px;
-    text-align: center;
-    letter-spacing: 0.15px;
-    color: #14142B;
-}
-
-.content-2 .card-movie>div p {
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
-    font-weight: 400px;
-    font-size: 8px;
-    line-height: 16px;
-    text-align: center;
-    letter-spacing: 0.4px;
-    color: #A0A3BD;
-}
-
-main .content-3 {
-    position: relative;
-    height: 500px;
-    padding-left: 10%;
-    padding-right: 10%;
-    background-color: #fff;
-    display: flex;
-    flex-direction: column;
-}
-
-.content-3 .top {
-    margin-top: 20px;
-    margin-bottom: 30px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.content-3 .top a {
-    font-family: Mulish, sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 20px;
-    text-align: right;
-    letter-spacing: 0.15px;
-    color: #5F2EEA;
-}
-
-.content-3 .top h2 {
-    font-family: Mulish, sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 30px;
-    color: #14142B;
-}
-
-.content-3 .mid {
-    margin-bottom: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.content-3 .mid button:hover {
-    color: #fff;
-    background: #5F2EEA;
-}
-
-.content-3 .mid button {
-    font-family: Mulish, sans-serif;
-    color: #5F2EEA;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 12px;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.75px;
-    width: 100px;
-    height: 35px;
-    border: 1px solid #5F2EEA;
-    border-radius: 4px;
-}
-
-.content-3 .bottom {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.content-3 .bottom .card-movie {
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
-    background: #FFFFFF;
-    border: 0.5px solid #DEDEDE;
-    border-radius: 8px;
-}
-
-.content-3 .bottom img {
-    width: 100px;
-}
-
-.content-3 .bottom .card-movie button:hover {
-    color: #fff;
-    background: #5F2EEA;
-}
-
-.content-3 .bottom button {
-    position: absolute;
-    bottom: -0px;
-    font-family: Mulish, sans-serif;
-    color: #5F2EEA;
-    font-style: normal;
-    font-size: 12px;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.75px;
-    width: 100%;
-    height: 25px;
-    border: 1px solid #5F2EEA;
-    border-radius: 4px;
-}
-
-.content-3 .card-movie>div {
-    width: 100px;
-    height: 80px;
-    position: relative;
-}
-
-.content-3 .card-movie>div h5 {
-    font-family: Mulish, sans-serif;
-    font-style: normal;
-    font-weight: 700px;
-    font-size: 12px;
-    line-height: 22px;
-    text-align: center;
-    letter-spacing: 0.15px;
-    color: #14142B;
-}
-
-.content-3 .card-movie>div p {
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
-    font-weight: 400px;
-    font-size: 8px;
-    line-height: 16px;
-    text-align: center;
-    letter-spacing: 0.4px;
-    color: #A0A3BD;
-}
-
-main .content-4 {
-    position: relative;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    height: 300px;
-    padding-left: 10%;
-    padding-right: 10%;
-    background-color: #fff;
-}
-
-.content-4 .card {
-    position: relative;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-
-.content-4 .card {
-    width: 95%;
-    height: 90%;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
-    border-radius: 4px;
-    font-size: 12pt;
-}
-
-.content-4 .top {
-    margin-top: 50px;
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.content-4 .top p {
-    font-family: Mulish, sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 114%;
-    text-align: center;
-    letter-spacing: 0.25px;
-    color: #4E4B66;
-}
-
-.content-4 .top h1 {
-    font-family: Mulish, sans-serif;
-    font-style: normal;
-    font-size: 40px;
-    line-height: 30px;
-    color: #5F2EEA;
-    margin-bottom: 20px;
-}
-
-.content-4 .bottom p {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    font-family: Mulish, sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 24px;
-    text-align: center;
-    letter-spacing: 0.75px;
-    color: #6E7191;
-}
-
-.content-4 .mid input {
-    margin-right: 10px;
-    height: 40px;
-    width: 250px;
-    background: #FCFDFE;
-    border: 2px solid #DEDEDE;
-    border-radius: 4px;
-    font-size: 12pt;
-}
-
-.content-4 .mid input::placeholder {
-    padding-left: 10%;
-    font-size: 12px;
-}
-
-.content-4 .mid button {
-    font-family: Mulish, sans-serif;
-    color: #fff;
-    font-style: normal;
-    font-size: 12px;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.75px;
-    width: 100px;
-    height: 40px;
-    background: #5F2EEA;
-    border-radius: 4px;
-    border: none;
-}
-
 
 /* FOOTER */
 footer {
@@ -710,7 +253,6 @@ footer .footer-item2>div p a {
 
 footer .footer-item3>div {
     display: grid;
-    /* flex-direction: column; */
 }
 
 footer .footer-item3>div img {
@@ -747,6 +289,252 @@ footer .footer-item4>div>div i {
     width: 10px;
     color: #6E7191;
 }
+
+/* MAIN */
+main {
+    grid-row: 2;
+}
+
+main .content-headers {
+    position: relative;
+    height: 150px;
+    margin-top: 3%;
+    padding-left: 10%;
+    padding-right: 10%;
+    background-color: #F5F6F8;
+    display: flex;
+    flex-direction: column;
+}
+
+.content-header {
+    margin-top: 20px;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.content-header h2 {
+    font-family: Mulish, sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 30px;
+    color: black;
+}
+
+.content-header .right {
+    display: flex;
+}
+
+.content-header .right .short {
+    position: relative;
+    margin-right: 30px;
+}
+
+.content-header .right .short input {
+    height: 40px;
+    width: 80px;
+    border-radius: 12px;
+    border: none;
+}
+
+.content-header .right .short select {
+    height: 40px;
+    width: 80px;
+    border-radius: 12px;
+    border: none;
+    appearance: none;
+    padding: 10%;
+    font-family: Mulish, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 20px;
+    letter-spacing: 0.75px;
+    color: #4E4B66;
+}
+
+.content-header .right .short i {
+    position: absolute;
+    font-size: 0.8em;
+    top: 11px;
+    right: 10px;
+    color: #A0A3BD;
+}
+
+.content-header .right .search {
+    position: relative;
+}
+
+.content-header .right .search input {
+    height: 40px;
+    width: 200px;
+    border-radius: 12px;
+    border: none;
+}
+
+.content-header .right .search input::placeholder {
+    padding-left: 15%;
+    font-family: Mulish, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 20px;
+    letter-spacing: 0.75px;
+    color: #4E4B66;
+}
+
+.content-header .right .search i {
+    position: absolute;
+    font-size: 0.8em;
+    top: 14px;
+    left: 10px;
+    color: #A0A3BD;
+}
+
+.content-mounth {
+    display: flex;
+    justify-content: space-between;
+}
+
+.content-mounth button {
+    font-family: 'Mulish', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    text-align: center;
+    color: #5F2EEA;
+    height: 30px;
+    width: 100px;
+    background-color: #FFF;
+    border: 1px solid #5F2EEA;
+    border-radius: 4px;
+}
+
+.content-mounth button:hover {
+    background: #5F2EEA;
+    color: #fff;
+}
+
+.content {
+    margin-left: 10%;
+    margin-right: 10%;
+    padding: 30px 50px;
+    display: block;
+    background-color: #FFF;
+    border-radius: 6px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.content .card {
+    flex-basis: 25%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.content .card .card-movie {
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    margin: 10px;
+    background: #FFFFFF;
+    border: 0.5px solid #DEDEDE;
+    border-radius: 8px;
+}
+
+.content .card .card-movie img {
+    width: 100px;
+}
+
+.content .card .card-movie button:hover {
+    color: #fff;
+    background: #5F2EEA;
+}
+
+.content .card .card-movie>div {
+    width: 100px;
+    height: 80px;
+    position: relative;
+}
+
+.content .card .card-movie div h5 {
+    font-family: Mulish, sans-serif;
+    font-style: normal;
+    font-weight: 700px;
+    font-size: 12px;
+    line-height: 22px;
+    text-align: center;
+    letter-spacing: 0.15px;
+    color: #14142B;
+}
+
+.content .card .card-movie div p {
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: 400px;
+    font-size: 8px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.4px;
+    color: #A0A3BD;
+}
+
+.content .card button {
+    position: absolute;
+    bottom: -0px;
+    font-family: Mulish, sans-serif;
+    color: #5F2EEA;
+    font-style: normal;
+    font-size: 12px;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.75px;
+    width: 100%;
+    height: 25px;
+    border: 1px solid #5F2EEA;
+    border-radius: 4px;
+}
+
+.content-pagination {
+    padding-left: 10%;
+    padding-right: 10%;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.content-pagination div {
+    width: 150px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.content-pagination>div button {
+    font-family: 'Mulish', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 18px;
+    text-align: center;
+    color: #5F2EEA;
+    height: 30px;
+    width: 30px;
+    background-color: #FFF;
+    border: 1px solid #5F2EEA;
+    border-radius: 4px;
+}
+
+.content-pagination>div button:hover {
+    background: #5F2EEA;
+    color: #fff;
+}
+
+
 
 @media screen and (max-width: 975px) {
 
@@ -865,6 +653,8 @@ footer .footer-item4>div>div i {
 
     /* FOOTER */
     footer {
+        padding-left: 0%;
+        padding-right: 0%;
         align-items: center;
     }
 
@@ -874,50 +664,17 @@ footer .footer-item4>div>div i {
     }
 
     /* CONTENT */
+
     .cal5,
     .cal6,
     .cal7,
-    .cal8,
-    .m4,
-    .m5,
-    .img4,
-    .img5 {
+    .cal8 {
         display: none;
     }
 
-    main .content-1 {
-        height: 700px;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-    }
-
-    main .content-1 .right {
-        height: 60%;
-    }
-
-    main .content-1 .left {
-        flex-basis: 150px;
-    }
-
-    main .content-1 .left p {
-        position: relative;
-        top: 30%;
-        font-family: Mulish, sans-serif;
-        font-style: normal;
-        font-size: 16px;
-        line-height: 30px;
-        color: #A0A3BD;
-    }
-
-    main .content-1 .left h1 {
-        position: relative;
-        top: 30%;
-        font-family: Mulish, sans-serif;
-        font-style: normal;
-        font-size: 40px;
-        line-height: 30px;
-        color: #5F2EEA;
+    #m7,
+    #m8 {
+        display: none;
     }
 }
 
@@ -1039,6 +796,8 @@ footer .footer-item4>div>div i {
 
     /* FOOTER */
     footer {
+        padding-left: 0%;
+        padding-right: 0%;
         align-items: center;
     }
 
@@ -1080,114 +839,53 @@ footer .footer-item4>div>div i {
     }
 
     /* CONTENT */
-    .cal5,
-    .cal6,
-    .cal7,
-    .cal8,
-    .cal4,
-    .m3,
-    .m4,
-    .m5,
-    .img3,
-    .img4,
-    .img5 {
-        display: none;
+    main .content-headers {
+        height: 180px;
     }
 
-    main .content-1 {
-        height: 600px;
-        display: flex;
-        align-items: center;
+    main .content-headers .content-header {
         flex-direction: column;
     }
 
-    main .content-1 .right img {
-        height: 80%;
+    main .content-headers .content-header h2 {
+        margin-bottom: 10px;
     }
 
-    main .content-1 .right {
-        height: 60%;
+    main .content-mounth button {
+        width: 90px;
     }
 
-    main .content-1 .left {
-        flex-basis: 150px;
+    .content .card .card-movie img {
+        width: 80px;
     }
 
-    main .content-1 .left p {
+    .content .card .card-movie>div {
+        width: 80px;
+        height: 80px;
         position: relative;
-        top: 30%;
-        font-family: Mulish, sans-serif;
-        font-style: normal;
-        font-size: 16px;
-        line-height: 30px;
-        color: #A0A3BD;
     }
 
-    main .content-1 .left h1 {
-        position: relative;
-        top: 30%;
-        font-family: Mulish, sans-serif;
-        font-style: normal;
-        font-size: 40px;
-        line-height: 30px;
-        color: #5F2EEA;
+    .content {
+        padding: 0px 0px;
+        display: block;
+        background-color: #ffffff00;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
     }
 
-
-    main .content-4 {
-        height: 400px;
+    .cal4,
+    .cal5,
+    .cal6,
+    .cal7,
+    .cal8 {
+        display: none;
     }
 
-    .content-4 .top p {
-        font-size: 15px;
-    }
-
-    .content-4 .top h1 {
-        font-size: 30px;
-    }
-
-    .content-4 .mid input {
-        margin-right: 0px;
-        height: 40px;
-        width: 100%;
-        background: #FCFDFE;
-        border: 2px solid #DEDEDE;
-        border-radius: 4px;
-        font-size: 12pt;
-    }
-
-    .content-4 .mid input::placeholder {
-        padding-left: 5%;
-        font-size: 12px;
-    }
-
-    .content-4 .mid button {
-        margin-top: 10px;
-        font-family: Mulish, sans-serif;
-        color: #fff;
-        font-style: normal;
-        font-size: 12px;
-        align-items: center;
-        text-align: center;
-        letter-spacing: 0.75px;
-        width: 100%;
-        height: 40px;
-        background: #5F2EEA;
-        border-radius: 4px;
-        border: none;
-    }
-
-    .content-4 .bottom p {
-        margin-top: 20px;
-        margin-bottom: 20px;
-        margin-left: 55px;
-        margin-right: 55px;
-        font-family: Mulish, sans-serif;
-        font-style: normal;
-        font-size: 12px;
-        line-height: 24px;
-        text-align: center;
-        letter-spacing: 0.75px;
-        color: #6E7191;
+    #m5,
+    #m6,
+    #m7,
+    #m8 {
+        display: none;
     }
 }
