--- a/css/list_movie.css
+++ b/css/list_movie.css
@@ -230,6 +230,10 @@ footer .footer-item1 p {
     color: #6E7191;
 }
 
+footer .information .footer-item1 p {
+    margin-top: -20px;
+}
+
 footer .footer-item2>div {
     display: flex;
     flex-direction: column;
@@ -663,6 +667,10 @@ main .content-headers {
         max-width: 80%;
     }
 
+    footer .information .footer-item1 p {
+        margin-top: -20px;
+    }
+
     /* CONTENT */
 
     .cal5,
@@ -809,8 +817,17 @@ main .content-headers {
         margin-top: 20px;
     }
 
-    footer .information .footer-item1 {
-        text-align: center;
+    footer .information .footer-item1 p {
+        margin-top: -20px;
+    }
+
+    footer .information .footer-item2>div {
+        display: flex;
+        flex-direction: row;
+    }
+
+    footer .information .footer-item2 .title {
+        margin-top: -40px;
     }
 
     footer .information .footer-item3>div {
